--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
+    "nanoid": "^5.1.6",
     "uuid": "^13.0.0"
   },
   "type": "commonjs"
